change inv path

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-#inventory      = /etc/graduation/ansible/hosts
+inventory      = /etc/graduation/ansible/hosts
 ansible_ssh_private_key_file = /etc/graduation/ansible/keys.pem
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
