add import nginxConfig

--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -4,13 +4,22 @@
     tags:
       - deploy
       - install_nginx
+
+  - import_tasks: nginxStart.yml
+    tags:
+      - deploy
+      - start_nginx
+
+  - import_tasks: nginxConfig.yml
+    tags:
+      - deploy
+      - config_nginx
+
   - import_tasks: nginxRemove.yml
     tags:
       - remove_nginx
       - erase
-  - import_tasks: nginxStart.yml
-    tags:
-      - start_nginx
+
   - import_tasks: nginxRestart.yml
     tags:
       - restart_nginx
