--- a/ansible/playbooks/roles.yml
+++ b/ansible/playbooks/roles.yml
@@ -1,5 +1,10 @@
 ---
 - hosts: all
   become: yes
+#  become_password: 1Vfrcbv53
   roles:
+    - checker
+    - wget
+    - java
+    - jenkins
     - nginx
