--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -69,7 +69,7 @@ ansible_ssh_private_key_file = /etc/graduation/ansible/keys.pem
 roles_path    = /etc/graduation/ansible/roles
 
 # uncomment this to disable SSH key host checking
-#host_key_checking = False
+host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
