--- a/ansible/roles/jenkins/tasks/jenkinsInstall.yml
+++ b/ansible/roles/jenkins/tasks/jenkinsInstall.yml
@@ -1,4 +1,17 @@
 ---
+  - name: Download jenkins.repo
+    get_url:
+      url: http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo
+      dest: /etc/yum.repos.d/jenkins.repo
+
+  - name: Import Jenkins Key
+    rpm_key:
+      state: present
+      key: https://jenkins-ci.org/redhat/jenkins-ci.org.key
+    tags:
+      - install_jenkins
+      - deploy
+      
   -  name: "{{ packageLog }} Install"
      package:
        name: "{{ packageName }}"
@@ -6,5 +19,5 @@
        update_cache: yes
      when: packageName not in ansible_facts.packages
      tags:
-       - install_nginx
+       - install_jenkins
        - deploy
