yum_repository: to yum:

--- a/ansible/roles/epel/tasks/epelRemove.yml
+++ b/ansible/roles/epel/tasks/epelRemove.yml
@@ -1,6 +1,6 @@
 ---
    - name: "{{ packageLog }} Disable"
-     yum_repository:
+     yum:
        name: "{{ packageName }}"
        state: absent
 
