--- a/ansible/roles/epel/tasks/epelRemove.yml
+++ b/ansible/roles/epel/tasks/epelRemove.yml
@@ -4,7 +4,7 @@
        name: "{{ packageName }}"
        state: absent
 
-     when: packageName in ansible_facts.packages
+     when: packageName in ansible_facts.packages and ( ansible_distribution == distr_cent or ansible_distribution == distr_rhel )
      tags:
        - remove_epel
        - erase
