--- a/ansible/roles/epel/tasks/epelInstall.yml
+++ b/ansible/roles/epel/tasks/epelInstall.yml
@@ -4,7 +4,7 @@
        name: "{{ packageName }}"
        state: present
 #       update_cache: yes
-     when: packageName not in ansible_facts.packages
+     when: packageName not in ansible_facts.packages and ( ansible_distribution == distr_cent or ansible_distribution == distr_rhel )
      tags:
        - install_epel
        - deploy
